--- a/src/main/resources/templates/secure/view_waiting_list.html
+++ b/src/main/resources/templates/secure/view_waiting_list.html
@@ -10,7 +10,7 @@
 <!-- Container fluid  -->
 <!-- ============================================================== -->
 
-<div class="container-fluid" th:fragment="content">
+<div class="container" th:fragment="content">
     <!-- ============================================================== -->
     <!-- Start Page Content -->
     <!-- ============================================================== -->
@@ -286,9 +286,8 @@
 
     // Make an AJAX request to fetch the trades based on the selected ITI
     $.ajax({
-        url: '/api/getCenterTradesByCenterId/' + selectedITI,
+        url: 'api/getCenterTradesByCenterId/' + selectedITI,
         method: 'GET',
-        data: { centerId: selectedITI },
         success: function(response) {
                     // Process the response and populate the trade select box
                     response.forEach(function(trade) {
@@ -390,7 +389,7 @@ $(document).ready(function() {
 
         // Make an AJAX request to fetch the candidates from merit list with the selected ITI and trade
         $.ajax({
-            url: '/secure/getWaitingListByCenterIdAndTradeId/' + selectedITI + '/' + selectedTrade,
+            url: 'getWaitingListByCenterIdAndTradeId/' + selectedITI + '/' + selectedTrade,
             method: 'GET',
             success: function(response) {
             console.log(response);
@@ -446,7 +445,7 @@ $(document).ready(function() {
                     '<button onclick="abc(\'' + candidate.applicationnumber + '\')" class="btn btn-primary btn-sm view-details" data-bs-toggle="modal" data-bs-target="#exampleModal">' + candidate.applicationnumber + '</button>', // App No column with button
                     candidate.applicantname.toUpperCase(),
                     candidate.categories, // Category column
-                    candidate.ph
+                    (candidate.ph === '1') ? 'YES' : 'NO', // PH column with 'YES' or 'NO' value
                 ];
 
                 // Add percentage columns based on the determined conditions
@@ -495,7 +494,7 @@ $(document).ready(function() {
         console.log("inside abc");
         $.ajax({
             type: "GET",
-            url: "/secure/application_no",
+            url: "application_no",
             data: "id="+id,
             success: function (data) {
                 $("#applicationNumber").val(data.applicationnumber);
@@ -563,6 +562,11 @@ $(document).ready(function() {
             }
         });
     }
+
+
+
+
+
 
 
 
