--- a/src/main/resources/templates/fragments/admin/sidebar.html
+++ b/src/main/resources/templates/fragments/admin/sidebar.html
@@ -8,52 +8,32 @@
         <nav class="sidebar-nav">
             <ul id="sidebarnav">
                 <li class="sidebar-item">
-                    <a class="sidebar-link sidebar-link" href="/secure/dashboard" aria-expanded="false">
+                    <a class="sidebar-link sidebar-link" href="dashboard" aria-expanded="false">
                         <i data-feather="home" class="feather-icon"></i>
                         <span class="hide-menu">Dashboard</span>
                     </a>
                 </li>
-                <!--        <li class="list-divider"></li>-->
-
-                <!--        <li class="sidebar-item"> <a class="sidebar-link" href="/secure/ivcs-profile"-->
-                <!--                                     aria-expanded="false"><i data-feather="user" class="feather-icon"></i>-->
-                <!--          <span class="hide-menu">User Profile</span></a>-->
-                <!--        </li>-->
 
 
                 <li class="list-divider"></li>
-                <!--        <li class="sidebar-item">-->
-                <!--          <a class="sidebar-link has-arrow" href="javascript:void(0)" aria-expanded="false">-->
-                <!--            <i data-feather="file-text" class="feather-icon"></i>-->
-                <!--            <span class="hide-menu">Master Data</span>-->
-                <!--          </a>-->
-                <!--          <ul aria-expanded="false" class="collapse  first-level base-level-line">-->
-                <!--            <li class="sidebar-item">-->
-                <!--              <a href="ivcs_view" class="sidebar-link">-->
-                <!--                <span class="hide-menu">Category</span>-->
-                <!--              </a>-->
-                <!--            </li>-->
-                <!--            <li class="sidebar-item">-->
-                <!--              <a href="ivcs_view" class="sidebar-link">-->
-                <!--                <span class="hide-menu">Ph Category</span>-->
-                <!--              </a>-->
-                <!--            </li>-->
-                <!--            <li class="sidebar-item">-->
-                <!--              <a href="ivcs_view" class="sidebar-link">-->
-                <!--                <span class="hide-menu">Waiting List </span>-->
-                <!--              </a>-->
-                <!--            </li>-->
+                <li class="sidebar-item"><a class="sidebar-link has-arrow" href="javascript:void(0)"
+                                            aria-expanded="false"><i data-feather="file-plus"
+                                                                     class="feather-icon"></i><span
+                        class="hide-menu">Tasks </span></a>
+                    <ul aria-expanded="false" class="collapse  first-level base-level-line">
 
-
-                <!--            &lt;!&ndash;            <li class="sidebar-item">&ndash;&gt;-->
-                <!--            &lt;!&ndash;              <a href="ivcs_view" class="sidebar-link">&ndash;&gt;-->
-                <!--            &lt;!&ndash;                <span class="hide-menu"> View</span>&ndash;&gt;-->
-                <!--            &lt;!&ndash;              </a>&ndash;&gt;-->
-                <!--            &lt;!&ndash;            </li>&ndash;&gt;-->
-                <!--          </ul>-->
-                <!--        </li>-->
-
-                <!--        <li class="list-divider"></li>-->
+                        <li class="sidebar-item">
+                            <a href="add_merit_list" class="sidebar-link">
+                                <span class="hide-menu">Add to Merit List</span>
+                            </a>
+                        </li>
+                        <li class="sidebar-item">
+                            <a href="remove_from_merit_list" class="sidebar-link">
+                                <span class="hide-menu">Remove from Merit List</span>
+                            </a>
+                        </li>
+                    </ul>
+                </li>
                 <li class="sidebar-item"><a class="sidebar-link has-arrow" href="javascript:void(0)"
                                             aria-expanded="false"><i data-feather="file-text"
                                                                      class="feather-icon"></i><span
@@ -80,28 +60,8 @@
                                 <span class="hide-menu">Waiting List</span>
                             </a>
                         </li>
-                        <!--            <li class="sidebar-item">-->
-                        <!--              <a href="/secure/ivcs-data-reported" class="sidebar-link">-->
-                        <!--                <span class="hide-menu"> Reports  </span>-->
-                        <!--              </a>-->
-                        <!--           </li>-->
                     </ul>
                 </li>
-                <li class="sidebar-item"><a class="sidebar-link has-arrow" href="javascript:void(0)"
-                                            aria-expanded="false"><i data-feather="file-plus"
-                                                                     class="feather-icon"></i><span
-                        class="hide-menu">Tasks </span></a>
-                    <ul aria-expanded="false" class="collapse  first-level base-level-line">
-
-                        <li class="sidebar-item">
-                            <a href="add_merit_list" class="sidebar-link">
-                                <span class="hide-menu">Add to Merit List</span>
-                            </a>
-                        </li>
-                    </ul>
-                </li>
-
-
                 <li class="list-divider"></li>
 
 
