--- a/src/main/resources/templates/layouts/adminlayout.html
+++ b/src/main/resources/templates/layouts/adminlayout.html
@@ -1,45 +1,46 @@
 <!DOCTYPE html>
 <html xmlns:th="http://www.thymeleaf.org">
 <head>
-  <title th:text="${pageTitle}">ITI Admissions</title>
-  <div th:replace="fragments/admin/htmlhead.html"> </div>
+    <title th:text="${pageTitle}">ITI Admissions</title>
+    <div th:replace="fragments/admin/htmlhead.html"></div>
 
 </head>
 <body>
-<div id="main-wrapper" data-theme="light" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full" data-sidebar-position="fixed" data-header-position="fixed" data-boxed-layout="full">
+<div id="main-wrapper" data-theme="light" data-layout="vertical" data-navbarbg="skin6" data-sidebartype="full"
+     data-sidebar-position="fixed" data-header-position="fixed" data-boxed-layout="full">
 
-<nav th:replace="fragments/admin/navbar.html"></nav>
-<div th:replace="fragments/admin/sidebar.html"></div>
-
-  <!-- ============================================================== -->
-  <!-- Page wrapper  -->
-  <!-- ============================================================== -->
-  <div class="page-wrapper">
+    <nav th:replace="fragments/admin/navbar.html"></nav>
+    <div th:replace="fragments/admin/sidebar.html"></div>
 
     <!-- ============================================================== -->
-    <!-- Bread crumb and right sidebar toggle -->
+    <!-- Page wrapper  -->
     <!-- ============================================================== -->
-    <div class="page-breadcrumb noprint">
-      <div class="row">
-        <div class="col-7 align-self-center">
-          <h4 class="page-title text-truncate text-dark font-weight-medium mb-1"></h4>
+    <div class="page-wrapper">
 
+        <!-- ============================================================== -->
+        <!-- Bread crumb and right sidebar toggle -->
+        <!-- ============================================================== -->
+        <div class="page-breadcrumb noprint">
+            <div class="row">
+                <div class="col-7 align-self-center">
+                    <h4 class="page-title text-truncate text-dark font-weight-medium mb-1"></h4>
+
+                </div>
+            </div>
         </div>
-      </div>
+        <!-- ============================================================== -->
+        <!-- End Bread crumb and right sidebar toggle -->
+        <!-- ============================================================== -->
+
+        <div th:replace="${view} :: content"></div>
+
     </div>
-    <!-- ============================================================== -->
-    <!-- End Bread crumb and right sidebar toggle -->
-    <!-- ============================================================== -->
 
-    <div th:replace="${view} :: content" ></div>
-
-  </div>
-
-  <footer th:replace="fragments/admin/footer.html"></footer>
+    <footer th:replace="fragments/admin/footer.html"></footer>
 
 
-  <script src="/admin/assets/libs/chart.js/dist/Chart.min.js"></script>
-  <script>
+    <script src="../admin/assets/libs/chart.js/dist/Chart.min.js"></script>
+    <script>
       $(document).ready(function() {
             $('.select2').select2();
        });
@@ -60,6 +61,9 @@
           }
           return color;
       }
+
+
+
     </script>
 </div>
 </body>
