--- a/src/main/resources/templates/secure/add_merit_list.html
+++ b/src/main/resources/templates/secure/add_merit_list.html
@@ -34,7 +34,7 @@
                                                 <input type="text" class="form-control" id="applicationNumberInput"
                                                        placeholder="Enter Application Number">
                                                 <button type="button" class="btn btn-primary" id="getNameButton"
-                                                        onclick="onClickGetName()">Get Name
+                                                        onclick="onClickGetName()">Get Details
                                                 </button>
                                             </div>
                                         </div>
@@ -123,170 +123,6 @@
     </div>
 
 
-    <!-- View Modal -->
-    <div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
-        <div class="modal-dialog modal-lg">
-            <div class="modal-content">
-                <div class="modal-header">
-                    <h3 class="modal-title" id="exampleModalLabel"><span id="applicantNameTitle"></span>'s Application
-                    </h3>
-                    <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
-                </div>
-                <div class="modal-body">
-                    <h4>Personal Details:</h4>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="applicationNumber">Application Number</label>
-                                <input id="applicationNumber" class="form-control" readonly>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="fatherName">Father's Name</label>
-                                <input id="fatherName" class="form-control" readonly>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="gender">Gender</label>
-                                <input id="gender" class="form-control" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label for="category">Category</label>
-                                <input id="category" class="form-control" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label for="maritalStatus">Marital Status</label>
-                                <input id="maritalStatus" class="form-control" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label for="email">Email</label>
-                                <input id="email" class="form-control" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label for="mobileNumber">Mobile Number</label>
-                                <input id="mobileNumber" class="form-control" readonly>
-                            </div>
-
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="centerName">Center Name</label>
-                                <input id="centerName" class="form-control" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label for="motherName">Mother's Name</label>
-                                <input id="motherName" class="form-control" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label for="dob">Date of Birth</label>
-                                <input id="dob" class="form-control" readonly>
-                            </div>
-
-
-                            <div class="form-group">
-                                <label for="tribe">Tribe</label>
-                                <input id="tribe" class="form-control" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label for="religion">Religion</label>
-                                <input id="religion" class="form-control" readonly>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="motherTongue">Mother Tongue</label>
-                                <input id="motherTongue" class="form-control" readonly>
-                            </div>
-
-
-                        </div>
-                    </div>
-                    <h4>Address (Permanent):</h4>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="statePerm">State</label>
-                                <input id="statePerm" class="form-control" readonly>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="townPerm">Town</label>
-                                <input id="townPerm" class="form-control" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label for="addressPerm">Address</label>
-                                <textarea id="addressPerm" class="form-control" readonly></textarea>
-                            </div>
-
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="districtPerm">District</label>
-                                <input id="districtPerm" class="form-control" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label for="pincodePerm">Pincode</label>
-                                <input id="pincodePerm" class="form-control" readonly>
-                            </div>
-                        </div>
-                    </div>
-                    <h4>Address (Correspondence):</h4>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="stateCorr">State</label>
-                                <input id="stateCorr" class="form-control" readonly>
-                            </div>
-
-                            <div class="form-group">
-                                <label for="townCorr">Town</label>
-                                <input id="townCorr" class="form-control" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label for="addressCorr">Address</label>
-                                <textarea id="addressCorr" class="form-control" readonly></textarea>
-                            </div>
-
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="districtCorr">District</label>
-                                <input id="districtCorr" class="form-control" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label for="pincodeCorr">Pincode</label>
-                                <input id="pincodeCorr" class="form-control" readonly>
-                            </div>
-
-                        </div>
-                    </div>
-                    <h4>Bank Details:</h4>
-                    <div class="row">
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="accountNumber">Account Number</label>
-                                <input id="accountNumber" class="form-control" readonly>
-                            </div>
-                            <div class="form-group">
-                                <label for="ifscCode">IFSC Code</label>
-                                <input id="ifscCode" class="form-control" readonly>
-                            </div>
-                        </div>
-                        <div class="col-md-6">
-                            <div class="form-group">
-                                <label for="bankName">Bank Name</label>
-                                <input id="bankName" class="form-control" readonly>
-                            </div>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="modal-footer">
-                <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
-            </div>
-        </div>
-    </div>
-
-
     <!-- ============================================================== -->
     <!-- End PAge Content -->
     <!-- ============================================================== -->
@@ -298,7 +134,7 @@
         console.log("inside getDetails");
         $.ajax({
             type: "GET",
-            url: "/secure/application_no",
+            url: "application_no",
             data: "id="+id,
             success: function (data) {
                 $("#applicationNumber").val(data.applicationnumber);
@@ -417,7 +253,7 @@ $(document).ready(function() {
     // Perform AJAX request
    $.ajax({
   type: "POST",
-  url: "/secure/addMeritList",
+  url: "addMeritList",
   data: JSON.stringify(data),
   contentType: "application/json",
   success: function(response) {
@@ -453,8 +289,6 @@ $(document).ready(function() {
 });
   });
 });
-
-
 
 
     </script>
