--- a/src/main/resources/templates/secure/registration_list.html
+++ b/src/main/resources/templates/secure/registration_list.html
@@ -10,7 +10,7 @@
 <!-- Container fluid  -->
 <!-- ============================================================== -->
 
-<div class="container-fluid" th:fragment="content">
+<div class="container" th:fragment="content">
     <!-- ============================================================== -->
     <!-- Start Page Content -->
     <!-- ============================================================== -->
@@ -22,16 +22,6 @@
                     <div class="d-flex align-items-center mb-4">
                         <h4 class="card-title">Registered Candidates</h4>
                         <div class="ms-auto">
-                            <!--                            <div class="dropdown sub-dropdown">-->
-                            <!--                                <button class="btn btn-link text-muted dropdown-toggle" type="button"-->
-                            <!--                                        id="dd2" data-bs-toggle="dropdown" aria-haspopup="true"-->
-                            <!--                                        aria-expanded="false">-->
-                            <!--                                    <i data-feather="more-vertical"></i>-->
-                            <!--                                </button>-->
-                            <!--                                <div class="dropdown-menu dropdown-menu-right" aria-labelledby="dd2">-->
-                            <!--                                    <a class="dropdown-item" href="registration">Insert</a>-->
-                            <!--                                </div>-->
-                            <!--                            </div>-->
                         </div>
                     </div>
                     <div class="mb-3">
@@ -76,17 +66,6 @@
                                 </tr>
                                 </thead>
                                 <tbody class="border border-info">
-
-                                <!--                                <tr>-->
-                                <!--                                    <td></td>-->
-                                <!--                                    <td></td>-->
-                                <!--                                    <td ></td>-->
-                                <!--                                    <td ></td>-->
-                                <!--                                    <td ></td>-->
-                                <!--                                    <td ></td>-->
-                                <!--                                    <td ></td>-->
-                                <!--                                    <td ></td>-->
-                                <!--                                </tr>-->
 
                                 </tbody>
 
@@ -346,9 +325,8 @@
 
     // Make an AJAX request to fetch the trades based on the selected ITI
     $.ajax({
-        url: '/api/getCenterTradesByCenterId/' + selectedITI,
+        url: 'api/getCenterTradesByCenterId/' + selectedITI,
         method: 'GET',
-        data: { centerId: selectedITI },
         success: function(response) {
                     // Process the response and populate the trade select box
                     response.forEach(function(trade) {
@@ -428,9 +406,10 @@ $(document).ready(function() {
         // Clear the table body
         table.clear().draw();
 
+
         // Make an AJAX request to fetch the candidates with the selected ITI and trade
         $.ajax({
-            url: '/secure/getApplicationByCenterIdAndTradeId/' + selectedITI + '/' + selectedTrade,
+            url: 'getApplicationByCenterIdAndTradeId/' + selectedITI + '/' + selectedTrade,
             method: 'GET',
             success: function(response) {
             console.log(response);
@@ -481,7 +460,7 @@ $(document).ready(function() {
 
         $.ajax({
             type: "GET",
-            url: "/secure/application_no",
+            url: "application_no",
             data: "id="+id,
             success: function (data) {
                 $("#applicationNumber").val(data.applicationnumber);
@@ -555,7 +534,7 @@ function editApplicant(id) {
         console.log("inside editApplicant");
         $.ajax({
             type: "GET",
-            url: "/secure/application_no",
+            url: "application_no",
             data: "id="+id,
             success: function (data) {
                 $("#editapplicationNumber").val(data.applicationnumber);
@@ -595,7 +574,7 @@ function editApplicant(id) {
     // Perform the AJAX request
     $.ajax({
         method: "PUT",
-        url: "/editApplicationDetails",
+        url: "editApplicationDetails",
         data: JSON.stringify(data),
         contentType: "application/json",
         success: function(response) {
